fixed remember-me bug

--- a/app/views/home/mobile.html.erb
+++ b/app/views/home/mobile.html.erb
@@ -2,7 +2,7 @@
 <p></p>
 Mobile pages are for smart phones and touch-screen devices.
 <p></p>
-BAMRU Mobile works best on Android, iPhone and iPad.  It works less well on BlackBerry/OperaMini.
+BAMRU Mobile works best on the newest Android, iPhone, iPad, and BlackBerry.
 <p></p>
 Visit <%= link_to mobile_url, mobile_path %> with your mobile browser and give it a try.
 <p></p>
@@ -10,7 +10,7 @@ Visit <%= link_to mobile_url, mobile_path %> with your mobile browser and give i
 <p></p>
 <b>Mobile technology is new, and we're still learning about the strengths and weaknesses of the tools and platforms.</b>
 <ul>
-<li>Blackberry's stock browser doesn't work.  Use the newest version of <a href="http://www.opera.com/mobile/">Opera Mini</a>.</li>
+<li>On older BlackBerry, the stock browser doesn't work.  Try <a href="http://www.opera.com/mobile/">Opera Mini</a>.</li>
 <li>iPad/iPod/iPhone have only been tested with IOS 4.2.1.  Older versions of IOS may not work.</li>
 <li>Android has only been tested on 2.2 (Froyo).  Older versions of Android may not work.</li>
 <li>The mobile pages should also work with modern desktop browsers.  Testing was successful on Firefox 5 and Chrome 12.0.742.</li>
