--- a/app/views/mobile/about.html.erb
+++ b/app/views/mobile/about.html.erb
@@ -26,3 +26,6 @@ Use BAMRU Mobile on Android, iPhone, iPad, or BlackBerry/Opera.
     </td>
   </tr>
 </table>
+<a href='tel:650-234-2344' data-role='button' data-ajax="false">Dial</a>
+<a href='sms:650-234-2344' data-role='button' data-ajax="false">SMS</a>
+<a href='mailto:joe@rr.com' data-role='button' data-ajax="false">Email</a>
