--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,8 +3,9 @@
 <head>
   <title>Bnet</title>
   <%= stylesheet_link_tag :application %>
-  <%# javascript_include_tag :application %>
   <script src="http://code.jquery.com/jquery-1.6.1.min.js"></script>
+  <%= javascript_include_tag "jquery_ujs.js" %>
+  <%# javascript_include_tag :application %>
   <%= csrf_meta_tag %>
 </head>
 <body id="mybody">
