--- a/app/views/mobile/index.html.erb
+++ b/app/views/mobile/index.html.erb
@@ -2,4 +2,7 @@
   <li data-role="list-divider">Home</li>
   <li><%= link_to "About", '/mobile/about' %></li>
   <li><%= link_to "Members", mobile_members_path %></li>
+  <% if current_member.developer? %>
+    <li><%= link_to "Chat", mobile_chats_path %></li>
+  <% end %>
 </div>
