--- a/app/views/mobile/chats/index.html.erb
+++ b/app/views/mobile/chats/index.html.erb
@@ -1,9 +1,8 @@
+<%= stylesheet_link_tag "chat.css" %>
 <%= javascript_include_tag "faye.js" %>
 <%= javascript_include_tag "chats.js" %>
 
-<h2>CHAT</h2>
-
-<ul id="chat">
+<ul id="mobile_chat">
   <%= render @chats %>
 </ul>
 
