--- a/app/views/layouts/mobile.html.erb
+++ b/app/views/layouts/mobile.html.erb
@@ -6,6 +6,7 @@
   <%# javascript_include_tag :application %>
   <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0b1/jquery.mobile-1.0b1.min.css" />
   <script src="http://code.jquery.com/jquery-1.6.1.min.js"></script>
+  <%= javascript_include_tag "jquery_ujs.js" %>
   <script src="http://code.jquery.com/mobile/1.0b1/jquery.mobile-1.0b1.min.js"></script>
   <meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1">
   <%# csrf_meta_tag %>
