--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -13,6 +13,8 @@
     </div>
     <div id=x_single_col>
 
+      <div id="chat_label" style="text-align: center;"></div>
+
       <ul id="chat">
         <%= render @chats %>
       </ul>
