--- a/app/assets/javascripts/chats.js.coffee.erb
+++ b/app/assets/javascripts/chats.js.coffee.erb
@@ -2,16 +2,33 @@
 # All this logic will automatically be available in application.js.
 # You can use CoffeeScript in this file: http://jashkenas.github.com/coffee-script/
 
+window.resizeChatList = ->
+  target = $('#mobile_chat, #chat').first()
+  list   = target.children()
+  rlist = $(list.get().reverse())
+  sum = 5
+  idx = 0
+  tgt = $(document).height() - 215
+  $.each rlist, (idx, ele) ->
+    sum = sum + 21
+    if sum < tgt
+      $(ele).show()
+    else
+      $(ele).hide()
+    $(ele).remove() if idx > 34
+
 window.updateChatList = (element)->
-  tgt_ele = $('#chat, #mobile_chat').first()
-#  $(target).append(element)
-  tgt_ele.append(element)
-  list   = tgt_ele.children()
-#  list   = $(target).children()
-  length = list.length
-  if length > 20
-    list.first().remove()
+  target = $('#chat, #mobile_chat').first()
+  target.append(element)
+  window.resizeChatList()
+
+window.sizeLabel = ->
+  str = "#{$(document).height()}H / #{$(document).width()}W"
+  $('#chat_label').text(str)
 
 $(document).ready ->
   faye = new Faye.Client("<%= FAYE_SERVER %>")
   faye.subscribe("/chats/new", (data) -> eval(data))
+  window.resizeChatList()
+  $(window).resize ->
+    window.resizeChatList()
