--- a/app/views/mobile/chats/index.html.erb
+++ b/app/views/mobile/chats/index.html.erb
@@ -2,11 +2,15 @@
 <%= javascript_include_tag "faye.js" %>
 <%= javascript_include_tag "chats.js" %>
 
+<div id="chat_label" style="text-align: center;"> </div>
+
 <ul id="mobile_chat">
   <%= render @chats %>
 </ul>
 
-<%= form_for Chat.new, :remote => true do |f| %>
-  <%= f.text_field :text %>
-  <%= f.submit "Send" %>
-<% end %>
+<div id="mobile_form">
+  <%= form_for Chat.new, :remote => true do |f| %>
+    <%= f.text_field :text %>
+    <%= f.submit "Send" %>
+  <% end %>
+</div>
