fixed reset password timeouts

--- a/app/views/notifier/password_reset_email.text.erb
+++ b/app/views/notifier/password_reset_email.text.erb
@@ -8,11 +8,6 @@ Thanks!
 
 BAMRU.net
 
-<%#
-
-    TODO: re-add this code after the timezone problem is fixed...
-    
 Note:
-- this reset link expires at <%= @expire >
+- this reset link expires at <%= @expire %>
 - each reset link can be used only once
-%>
