--- a/app/views/password/sending.html.erb
+++ b/app/views/password/sending.html.erb
@@ -11,9 +11,9 @@ the instructions to reset your password.
 <h3>NOTICE !!</h3>
   This application is currently running in development mode.
   <p></p>
-  Emails are not generated when running in development mode.
-  <p></p>
-  Sorry!
+  Emails are not generated in development mode.
+  <p><p/>
+  So - the email is actually not being sent.  Sorry!
   <p></p>
   If you really need your password to be reset, please contact Andy Leak.
 <% end %>
