spreadsheet rendering works

--- a/app/views/avail_ops/show.html.erb
+++ b/app/views/avail_ops/show.html.erb
@@ -4,6 +4,8 @@
 <%= javascript_tag "var MEMBER_ID = #{@member.id};" %>
 <%= javascript_include_tag "jquery-ui.min.js"       %>
 <%= javascript_include_tag "members_autoselect.js"  %>
+<%= javascript_include_tag "avail_ops.js"           %>
+<%= javascript_include_tag "equal_height.js"        %>
 <%= csrf_meta_tag %>
 
 
