--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Bnet</title>
+  <title>BAMRU.net</title>
   <%= stylesheet_link_tag :application %>
+  <link href='favicon.ico' rel='shortcut icon' type='image/vnd.microsoft.icon'/>
   <script src="http://code.jquery.com/jquery-1.6.1.min.js"></script>
   <%= javascript_include_tag "jquery_ujs.js" %>
   <%# javascript_include_tag :application %>
