--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>BAMRU.net</title>
+  <title><%= request.host.gsub('bamru','BAMRU')%></title>
   <%= stylesheet_link_tag :application %>
   <link href='<%= raw favicon_file %>' rel='shortcut icon' type='image/vnd.microsoft.icon'/>
   <script src="http://code.jquery.com/jquery-1.6.1.min.js"></script>
