--- a/app/views/unit_photos/index.html.erb
+++ b/app/views/unit_photos/index.html.erb
@@ -13,36 +13,37 @@
 
     <div id=x_single_col>
 
-      <table width=890>
-        <% @members.in_groups_of(5) do |row| %>
-          <tr>
-            <% row.each do |mem| %>
-              <% unless mem.nil? %>
-                <td align=center valign=top>
+      <% cache(:fragment => 'unit_photos_table') do %>
+        <table width=890>
+          <% @members.in_groups_of(5) do |row| %>
+            <tr>
+              <% row.each do |mem| %>
+                <% unless mem.nil? %>
+                  <td align=center valign=top>
 
-                  <table style='border:0px solid white' cellpadding='0' cellspacing='3' width=156>
-                    <tr align=center>
-                      <td bgcolor=#eeeeee height=112 style='border: 1px solid #999999'>
-                        <a href='<%= mem.photos.first.image.url %>' target='_blank'>
-                          <%= image_tag(mem.photos.first.image.url(:roster), :align => "absmiddle", :class => "roster_display_photo") %>
-                        </a>
-                      </td>
-                    </tr>
-                    <tr align=center>
-                      <td class=body>
-                        <%= link_to(mem.full_name, member_path(mem), :style => "text-decoration:none;") %>
-                      </td>
-                    </tr>
-                    <%= raw display_extra_photos(mem) %>
-                  </table>
+                    <table style='border:0px solid white' cellpadding='0' cellspacing='3' width=156>
+                      <tr align=center>
+                        <td bgcolor=#eeeeee height=112 style='border: 1px solid #999999'>
+                          <a href='<%= mem.photos.first.image.url %>' target='_blank'>
+                            <%= image_tag(mem.photos.first.image.url(:roster), :align => "absmiddle", :class => "roster_display_photo") %>
+                          </a>
+                        </td>
+                      </tr>
+                      <tr align=center>
+                        <td class=body>
+                          <%= link_to(mem.full_name, member_path(mem), :style => "text-decoration:none;") %>
+                        </td>
+                      </tr>
+                      <%= raw display_extra_photos(mem) %>
+                    </table>
 
-                </td>
+                  </td>
+                <% end %>
               <% end %>
-            <% end %>
-          </tr>
-        <% end %>
-      </table>
-
+            </tr>
+          <% end %>
+        </table>
+      <% end %>
 
     </div>
     <div id=x_footer> </div>
