--- a/app/views/unit_certs/index.html.erb
+++ b/app/views/unit_certs/index.html.erb
@@ -16,42 +16,44 @@
     </div>
     <div id=x_single_col>
 
-      <table id="myTable" class="tablesorter">
-        <thead>
-        <tr>
-          <th>Role</th>
-          <th>Name</th>
-          <th>Med.&nbsp;&nbsp;</th>
-          <th>CPR&nbsp;&nbsp;</th>
-          <th>HAM</th>
-          <th>Tracking&nbsp;&nbsp;</th>
-          <th>Avy&nbsp;&nbsp;</th>
-          <th>Rigging&nbsp;&nbsp;</th>
-          <th>ICS&nbsp;&nbsp;</th>
-          <th>Search<br/>Mgmt.&nbsp;&nbsp;</th>
-          <th>SO<br/>Driver&nbsp;&nbsp;</th>
-          <th>SO<br/>Bkgrnd&nbsp;&nbsp;</th>
-        </tr>
-        </thead>
-        <tbody>
-        <% @members.each do |mem| %>
+      <% cache(:fragment => 'unit_certs_table') do %>
+        <table id="myTable" class="tablesorter">
+          <thead>
           <tr>
-            <td><%=mem.full_roles%></td>
-            <td class=link><%= color_name(mem) %>
-              <%= raw display_table_cert(mem, "medical")    %>
-              <%= raw display_table_cert(mem, "cpr")        %>
-              <%= raw display_table_cert(mem, "ham")        %>
-              <%= raw display_table_cert(mem, "tracking")   %>
-              <%= raw display_table_cert(mem, "avalanche")  %>
-              <%= raw display_table_cert(mem, "rigging")    %>
-              <%= raw display_table_cert(mem, "ics")        %>
-              <%= raw display_table_cert(mem, "overhead")   %>
-              <%= raw display_table_cert(mem, "driver")     %>
-              <%= raw display_table_cert(mem, "background") %>
+            <th>Role</th>
+            <th>Name</th>
+            <th>Med.&nbsp;&nbsp;</th>
+            <th>CPR&nbsp;&nbsp;</th>
+            <th>HAM</th>
+            <th>Tracking&nbsp;&nbsp;</th>
+            <th>Avy&nbsp;&nbsp;</th>
+            <th>Rigging&nbsp;&nbsp;</th>
+            <th>ICS&nbsp;&nbsp;</th>
+            <th>Search<br/>Mgmt.&nbsp;&nbsp;</th>
+            <th>SO<br/>Driver&nbsp;&nbsp;</th>
+            <th>SO<br/>Bkgrnd&nbsp;&nbsp;</th>
           </tr>
-        <% end %>
-        </tbody>
-      </table>
+          </thead>
+          <tbody>
+          <% @members.each do |mem| %>
+            <tr>
+              <td><%=mem.full_roles%></td>
+              <td class=link><%= color_name(mem) %>
+                <%= raw display_table_cert(mem, "medical")    %>
+                <%= raw display_table_cert(mem, "cpr")        %>
+                <%= raw display_table_cert(mem, "ham")        %>
+                <%= raw display_table_cert(mem, "tracking")   %>
+                <%= raw display_table_cert(mem, "avalanche")  %>
+                <%= raw display_table_cert(mem, "rigging")    %>
+                <%= raw display_table_cert(mem, "ics")        %>
+                <%= raw display_table_cert(mem, "overhead")   %>
+                <%= raw display_table_cert(mem, "driver")     %>
+                <%= raw display_table_cert(mem, "background") %>
+            </tr>
+          <% end %>
+          </tbody>
+        </table>
+      <% end %>
 
     </div>
     <div id=x_footer> </div>
