moved file data to seed directory

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -64,6 +64,7 @@
             <td valign="top" bgcolor="white">
               <table width=100%><tr>
                   <td><font size="2" class="body"><b><a href="http://wiki.bamru.net/?username=<%=@current_member.wiki_name%>">Wiki</a></b><br/></font></td>
+                <td align=center><b><%= link_to "Docs", '/docs' %></b></td>
                 <% if current_member.developer? %>
                   <td align=center><b><%= link_to "Mobile", '/home/mobile' %></b></td>
                   <td align=right><b><%= link_to "Chat", '/chats' %></b></td>
