--- a/app/views/certs/_form.html.erb
+++ b/app/views/certs/_form.html.erb
@@ -3,6 +3,6 @@
   <%= f.input        :expiration  %>
   <%= f.input        :description %>
   <%= f.input        :link        if @cert.typ == "ham"%>
-  <%= f.input        :document    unless @cert.typ == "ham"%>
+  <%= f.input        :cert        unless @cert.typ == "ham"%>
   <%= f.button       :submit      %>
 <% end %>
