--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,6 +11,7 @@
               <table border="0" cellpadding="0" cellspacing="0" align="left" width="100%">
                 <tr>
                   <td class="body" align="left">
+                    <a href="#" onclick="$(this).html('js worked');">js test</a><br/>
                     <A href="/members"><b>Pager notification and telephone roster</b></A><span class=bullet>&nbsp;&nbsp;&bull;&nbsp;</span>
                     <A href="/members/<%=current_member.id%>/edit" class='small'><i>Edit my contact info</i></A><br>            </td>
                   <td class="body" align="right"><A href="/smso_pagers.html">SMSO pagers</A>
@@ -62,16 +63,16 @@
           </tr>
           <tr>
             <td valign="top" bgcolor="white">
-              <table width=100%><tr>
-                  <td><font size="2" class="body"><b><a target='_blank' href="http://wiki.bamru.net/?username=<%=@current_member.wiki_name%>">Wiki</a></b><br/></font></td>
+              <table width=100%>
+                <tr>
+                <td align=center><b><a target='_blank' href="http://wiki.bamru.net/?username=<%=@current_member.wiki_name%>">Wiki</a></b></td>
                 <td align=center><b><%= link_to "Docs", '/docs' %></b></td>
-                <% if current_member.developer? %>
-                  <td align=center><b><%= link_to "Mobile", '/home/mobile' %></b></td>
-                  <td align=right><b><%= link_to "Chat", '/chats' %></b></td>
-                <% else %>
-                  <td align=right><b><%= link_to "Mobile", '/home/mobile' %></b></td>
-                <% end %>
-              </tr></table>
+              <% if current_member.developer? %>
+                <td align=center><b><%= link_to "Mobile", '/home/mobile' %></b></td>
+                <td align=center><b><%= link_to "Chat", '/chats' %></b></td>
+              <% end %>
+              </tr>
+              </table>
             </td>
           </tr>
           <tr>
