--- a/app/views/home/wiki.html.erb
+++ b/app/views/home/wiki.html.erb
@@ -1,4 +1,3 @@
-Wiki Access: <b><%=current_member.wiki_name%></b>.
+<b>Wiki Access: <%=current_member.wiki_name%></b>
 <p></p>
-Click <a href="http://wiki.bamru.net/?username=<%=current_member.wiki_name%>">here</a>
-to view the BAMRU wiki.
+To view the BAMRU Wiki, click <a href="http://wiki.bamru.net/?username=<%=current_member.wiki_name%>">here</a>.
