another cache tweak

--- a/app/views/docs/index.html.erb
+++ b/app/views/docs/index.html.erb
@@ -21,7 +21,7 @@
 
     <div id=x_single_col>
 
-      <% cache(:fragment => 'docs_table') do %>
+      <% cache('docs_table') do %>
 
         <table id="MyTable" class="tablesorter">
           <thead>
