--- a/app/views/unit_certs/index.html.erb
+++ b/app/views/unit_certs/index.html.erb
@@ -16,7 +16,7 @@
     </div>
     <div id=x_single_col>
 
-      <% cache(:fragment => 'unit_certs_table') do %>
+      <% cache('unit_certs_table') do %>
         <table id="myTable" class="tablesorter">
           <thead>
           <tr>
