added two new cert reports

--- a/app/views/certs/index.html.erb
+++ b/app/views/certs/index.html.erb
@@ -52,9 +52,9 @@
         <tr><td>Avalanche</td>    <%= raw cert_value(@member, :avalanche)     %></tr>
         <tr><td>Rigging</td>      <%= raw cert_value(@member, :rigging)       %></tr>
         <tr><td>ICS</td>          <%= raw cert_value(@member, :ics)           %></tr>
-        <tr><td>Search Mgmt.</td> <%= raw cert_value(@member, :search_mgmt)   %></tr>
-        <tr><td>SO Driver</td>    <%= raw cert_value(@member, :so_driver)     %></tr>
-        <tr><td>SO Background</td><%= raw cert_value(@member, :so_background) %></tr>
+        <tr><td>Search Mgmt.</td> <%= raw cert_value(@member, :overhead)      %></tr>
+        <tr><td>SO Driver</td>    <%= raw cert_value(@member, :driver)        %></tr>
+        <tr><td>SO Background</td><%= raw cert_value(@member, :background)    %></tr>
         </tbody>
       </table>
 
