--- a/app/views/unit_certs/index.html.erb
+++ b/app/views/unit_certs/index.html.erb
@@ -62,9 +62,7 @@
 
     </div>
     <div id=x_footer style="font-size: 10px;">
-      Cert Reports: <%= link_to("Expired Certs", "#{reports_path}/BAMRU-CertExpiration.pdf", :target => "_blank") %>
-      |
-      <%= link_to("All Certs", "#{reports_path}/BAMRU-CertAll.pdf", :target => "_blank") %>
+      <%= link_to("Expired Certs", "#{reports_path}/BAMRU-CertExpiration.pdf", :target => "_blank") %>
     </div>
   </div>
 </div>
