fixed bug with token handling

--- a/app/views/password/sending.html.erb
+++ b/app/views/password/sending.html.erb
@@ -1,5 +1,5 @@
 <br/><h2>Email Being Sent</h2>
-An email is being sent to you at <%= @address %>.
+A 'password reset' email is being sent to you at <%= @address %>.
 <p></p>
 When the email arrives, please open it and follow
 the instructions to reset your password.
