--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -65,7 +65,7 @@
               <table width=100%>
                 <tr>
                 <td align=center><b><a target='_blank' href="http://wiki.bamru.net/?username=<%=@current_member.wiki_name%>">Wiki</a></b></td>
-                <td align=center><b><%= link_to "Docs", '/docs' %></b></td>
+                <td align=center><b><%= link_to "Files", '/files' %></b></td>
               <% if current_member.developer? %>
                 <td align=center><b><%= link_to "Mobile", '/home/mobile' %></b></td>
                 <td align=center><b><%= link_to "Chat", '/chats' %></b></td>
