added sort explaination to edit page (fixed item #2)

--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -117,7 +117,12 @@
   </div>
 
   <div id=x_footer>
-
+    <table width=100%>
+      <tr>
+        <td style="font-size: 10px;">Sort items by dragging their handle "+" up and down</td>
+        <td style="font-size: 10px;">Top items are used when display space is limited</td>
+      </tr>
+    </table>
   </div>
   </div>
   </div>
