tweaked DO label (fixes issue #24)

--- a/app/views/do_assignments/index.html.erb
+++ b/app/views/do_assignments/index.html.erb
@@ -3,7 +3,7 @@
     <div id=x_header>
       <table width=100%>
         <tr>
-          <td align=left><b>Team Duty Officers</b></td>
+          <td align=left><b>Duty Officer Schedule</b></td>
           <td align=right>
             <%= link_to("Edit My DO Availability", member_avail_dos_path(current_member)) %>
           </td>
