added cert label (fixed issue #18)

--- a/app/views/certs/new.html.erb
+++ b/app/views/certs/new.html.erb
@@ -29,7 +29,9 @@
       <%= render :partial => 'form' %>
 
     </div>
-    <div id=x_footer> </div>
+    <div id=x_footer>
+      <span style="font-size: 10px;">* Required Field</span>
+    </div>
 
   </div>
 </div>
