indented non-Bd/OL titles (fixes issue #26)

--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -58,12 +58,12 @@
         </tr></table>
         <input type="checkbox" class="slx" id=cb_Bd> Board of Directors (Bd)<br/>
         <input type="checkbox" class="slx" id=cb_OL> Operations Leader (OL)<br/>
-        <input type="checkbox" class="slx" id=cb_TM> Technical Member (TM)<br/>
-        <input type="checkbox" class="slx" id=cb_FM> Field Member (FM)<br/>
-        <input type="checkbox" class="slx" id=cb_T > Trainee (T)<br/>
-        <input type="checkbox" class="slx" id=cb_R > Reserve (R)<br/>
-        <input type="checkbox" class="slx" id=cb_S > Support (S)<br/>
-        <input type="checkbox" class="slx" id=cb_A > Associate (A)<br/>
+        <input type="checkbox" class="slx" id=cb_TM> <span style="margin-left:10px;">Technical Member (TM)</span><br/>
+        <input type="checkbox" class="slx" id=cb_FM> <span style="margin-left:10px;">Field Member (FM)    </span><br/>
+        <input type="checkbox" class="slx" id=cb_T > <span style="margin-left:10px;">Trainee (T)          </span><br/>
+        <input type="checkbox" class="slx" id=cb_R > <span style="margin-left:10px;">Reserve (R)          </span><br/>
+        <input type="checkbox" class="slx" id=cb_S > <span style="margin-left:10px;">Support (S)          </span><br/>
+        <input type="checkbox" class="slx" id=cb_A > <span style="margin-left:10px;">Associate (A)        </span><br/>
 
         <div style="padding: 4px; margin-top:15px; margin-bottom:15px; background-color:lightblue;">
           <table width=100%><tr>
