--- a/app/views/unit_certs/index.html.erb
+++ b/app/views/unit_certs/index.html.erb
@@ -61,8 +61,18 @@
       <% end %>
 
     </div>
-    <div id=x_footer style="font-size: 10px;">
-      <%= link_to("Expired Certs", "#{reports_path}/BAMRU-CertExpiration.pdf", :target => "_blank") %>
+    <div id=x_footer>
+      <table width=100%>
+        <tr>
+          <td align=left style="font-size: 10px;">
+            BACKGROUND COLOR: Green = certification is current; Yellow = expires within 1 month; Orange = expires within 3 months; Pink = expired<br/>
+            TEXT COLOR: Blue = link to documentation; Purple = link to comment; Red member name = missing current Medical and/or CPR.
+          </td>
+          <td align=right style="font-size: 10px;">
+            <%= link_to("Expired Certs", "#{reports_path}/BAMRU-CertExpiration.pdf", :target => "_blank") %>
+          </td>
+        </tr>
+      </table>
     </div>
   </div>
 </div>
